<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- ADD ESTATE -->
    <string name="page_title_add">ADD ESTATE</string>
    <string name="titleHint_mandateNumber">Mandate number</string>
    <string name="titleHint_surface">Surface</string>
    <string name="titleHint_bedrooms">Bedrooms</string>
    <string name="titleHint_ground">Ground</string>
    <string name="titleHint_price">Price</string>
    <string name="titleHint_description">Description</string>
    <string name="titleHint_adress">Adress</string>
    <string name="titleHint_zipcode">Zip code</string>
    <string name="titleHint_city">City</string>
    <string name="title_pt_interest">Nearby point interest:</string>
    <string name="title_status">Estate status:</string>
    <string name="titleHint_upToSale">Up to sale date</string>
    <string name="titleHint_solddate">Sold date</string>

    <!-- SEARCH ESTATE -->
    <string name="page_title_search">SEARCH ESTATE</string>

    <!-- UPDATE ESTATE -->
    <string name="page_title_update">UPDATE ESTATE</string>

    <!-- ESTATE DETAILS -->
    <string name="page_title_detail">ESTATE DETAILS</string>
    <string name="description_estate_picture">Estate picture</string>
    <string name="title_photos">Pictures</string>
    <string name="title_description">Description</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="title_surface">Surface:</string>
    <string name="title_rooms">Rooms:</string>
    <string name="title_bathrooms">Bathrooms:</string>
    <string name="title_bed">Beds:</string>
    <string name="title_location">Location:</string>
    <string name="surface_value">750sqm</string>
    <string name="rooms_value">8</string>
    <string name="bathrooms_value">2</string>
    <string name="bedrooms_value">4</string>
    <string name="location_value">740 Avenue des Champs Elysées 75008 Paris</string>


    <string-array name="ESTATES">
        <item>House</item>
        <item>Flat</item>
        <item>Duplex</item>
        <item>Penthouse</item>
    </string-array>

    <string-array name="ROOMS">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5 et +</item>
    </string-array>

    <string-array name="BEDROOMS">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5 et +</item>
    </string-array>

    <string-array name="BATHROOMS">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4 et +</item>
    </string-array>

    <string-array name="AGENT">
        <item>Anna Kour</item>
        <item>John Simon</item>
        <item>Martin Dupont</item>
    </string-array>

    <string-array name="DESCRIPTION">
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>Garden</item>

    </string-array>

</resources>
