<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_photos"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_constraintTop_toTopOf="parent"
        android:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/img01"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/flat01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_photos"
        android:layout_marginLeft="15dp"
        />

    <ImageView
        android:id="@+id/img02"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/House01"
        app:layout_constraintStart_toEndOf="@+id/img01"
        app:layout_constraintTop_toBottomOf="@+id/title_photos"
        android:layout_marginLeft="15dp"
        />

    <ImageView
        android:id="@+id/img03"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/House02"
        app:layout_constraintStart_toEndOf="@+id/img02"
        app:layout_constraintTop_toBottomOf="@+id/title_photos"
        android:layout_marginLeft="15dp"
        />

    <ImageView
        android:id="@+id/img04"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/flat01"
        app:layout_constraintStart_toEndOf="@+id/img03"
        app:layout_constraintTop_toBottomOf="@+id/title_photos"
        android:layout_marginLeft="15dp"
        />

    <ImageView
        android:id="@+id/img05"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/House02"
        app:layout_constraintStart_toEndOf="@+id/img04"
        app:layout_constraintTop_toBottomOf="@+id/title_photos"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/title_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_description"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/img01"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/title_description"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/description">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_surface"/>

                <TextView
                    android:id="@+id/surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_surface"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/surface_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/surface_value"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_nb_rooms"/>

                <TextView
                    android:id="@+id/nb_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_rooms"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/rooms_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/rooms_value"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_bathroom"/>
                <TextView
                    android:id="@+id/nb_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/title_bathrooms"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/bathrooms_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/bathrooms_value"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_nb_bed"/>
                <TextView
                    android:id="@+id/nb_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/title_bed"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:id="@+id/bedrooms_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/bedrooms_value"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_location"/>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_location"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_value"
                    android:layout_marginLeft="44dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="12dp"
                    android:text="@string/location_value"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="left">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/carte"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>